...
    "catalog.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Catalog"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Каталог"
...
